push pour sophie

--- a/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
+++ b/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
@@ -1,38 +1,39 @@
 <app-header-dyn></app-header-dyn>
 
+
+
 <div class="ajoutPContain">
     <div class="overlay">
         <div class="formContain">
             <form [formGroup]="form"  (ngSubmit)="onSubmit()">
-                <h1>Ajouter un patient</h1>
+                <h1><p> Détails du patient {{ patientId}}</p></h1>
                 <div class="inputContain">
-                    <div class="inputAjoutP">
-                        <label for="">Nom :</label>
-                        <input placeholder="Nom" type="text" name="name" formControlName="name" [(ngModel)]="patient.name">
+                <div class="inputAjoutP">
+                    <label for="">Nom :</label>
+                    <input matInput= "patient.name" type="text" name="name" formControlName="name" [(ngModel)]="patient.name">
 
-                        <small *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">
-                            This field is required
-                        </small>
-                    </div>
+                    <small *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">
+                        This field is required
+                    </small>
+                </div>
 
-                    
-                    
-                    <div class="inputAjoutP">
-                        <label for="">Prénom :</label>
-                        <input placeholder="Prénom" type="text" name="firstname" formControlName="firstname" [(ngModel)]="patient.firstname">
+                
+                
+                <div class="inputAjoutP">
+                    <label for="">Prénom :</label>
+                    <input matInput= "patient.firstname" type="text" name="firstname" formControlName="firstname" [(ngModel)]="patient.firstname">
 
-                        <small *ngIf="form.get('firstname')?.hasError('required') && form.get('firstname')?.touched">
-                            This field is required
-                        </small>
-                    </div>
-                    
-                    
+                    <small *ngIf="form.get('firstname')?.hasError('required') && form.get('firstname')?.touched">
+                        This field is required
+                    </small>
+                </div>
 
                 </div>
+
                 <div class="inputContain">
                     <div class="inputAjoutP">
                         <label for="">Adresse :</label>
-                        <input placeholder="Adresse" type="text" name="address" formControlName="address" [(ngModel)]="patient.address">
+                        <input matInput= "patient.address" type="text" name="address" formControlName="address" [(ngModel)]="patient.address">
 
                         <small *ngIf="form.get('address')?.hasError('required') && form.get('address')?.touched">
                             This field is required
@@ -41,7 +42,7 @@
 
                     <div class="inputAjoutP">
                         <label for="">Ville :</label>
-                        <input placeholder="Ville" type="text" name="city" formControlName="city" [(ngModel)]="patient.city">
+                        <input matInput= "patient.city" type="text" name="city" formControlName="city" [(ngModel)]="patient.city">
 
                         <small *ngIf="form.get('city')?.hasError('required') && form.get('city')?.touched">
                             This field is required
@@ -52,7 +53,7 @@
                 <div class="inputContain">
                     <div class="inputAjoutP">
                         <label for="">Code Postal :</label>
-                        <input placeholder="Code Postal" type="text" name="postcode" formControlName="postcode" [(ngModel)]="patient.postcode">
+                        <input matInput= "patient.postcode" type="text" name="postcode" formControlName="postcode" [(ngModel)]="patient.postcode">
 
                         <small *ngIf="form.get('postcode')?.hasError('required') && form.get('postcode')?.touched">
                             This field is required
@@ -63,7 +64,7 @@
 
                     <div class="inputAjoutP">
                         <label for="">Date de naissance :</label>
-                        <input placeholder="Date de naissance" type="date" name="birth_date" formControlName="birthDate" [(ngModel)]="patient.birthDate">
+                        <input matInput= "patient.birthDate" type="date" name="birth_date" formControlName="birthDate" [ngModel]="patient.birthDate | date:'yyyy-MM-dd'">
 
                         <small *ngIf="form.get('birthDate')?.hasError('required') && form.get('birthDate')?.touched">
                             This field is required
@@ -74,7 +75,7 @@
                 <div class="inputContain">
                     <div class="inputAjoutP">
                         <label for="">N° sécurité social :</label>
-                        <input placeholder="Numéro sécurité social" type="text" name="security_number" formControlName="securityNumber" [(ngModel)]="patient.securityNumber">
+                        <input matInput= "patient.securityNumber" type="text" name="security_number" formControlName="securityNumber" [(ngModel)]="patient.securityNumber">
 
                         <small *ngIf="form.get('securityNumber')?.hasError('required') && form.get('securityNumber')?.touched">
                             This field is required
@@ -83,7 +84,7 @@
                     
                     <div class="inputAjoutP">
                         <label for="">Téléphone :</label>
-                        <input placeholder="XX-XX-XX-XX-XX" formControlName="phone" type="tel" name="phone" [(ngModel)]="patient.phone">
+                        <input matInput= "patient.phone" formControlName="phone" type="tel" name="phone" [(ngModel)]="patient.phone">
 
                         <small *ngIf="form.get('phone')?.hasError('required') && form.get('phone')?.touched">
                             This field is required
@@ -97,4 +98,4 @@
             </form>
         </div> 
     </div>
-</div>
+
