--- a/HospidieuFront/src/app/components/user/user.component.html
+++ b/HospidieuFront/src/app/components/user/user.component.html
@@ -16,9 +16,9 @@
                 <tbody>
                     <tr *ngFor = "let user of users">
                         <td> {{ user.idUser}}</td>
-                        <td> {{ user.firstname}}</td>
+                        <td> {{ user.firstName}}</td>
                         <td> {{ user.name}}</td>
-                        <td> {{ user.email}}</td>
+                        <td> {{ user.mail}}</td>
                         <!-- <td> {{ user.password}}</td> -->
                         <td> {{ user.role}}</td>
                    
