--- a/HospidieuFront/src/app/components/admission/admission.component.scss
+++ b/HospidieuFront/src/app/components/admission/admission.component.scss
@@ -26,18 +26,25 @@ form {
     flex-flow: column nowrap;
     text-align: center;
     margin: auto;
-    padding: 20px 30px;
+    padding: 2em 3em 2em 3em;
     max-width: 500px;
     min-width: 200px;
     border-radius: 10px;
-    margin-top: 3em;
+    margin-top: 2em;
     box-shadow: 1px 1px 20px 3px darkgrey;
     background-color: rgba($colorBaseFond,0.9);
     gap: 0.2em;
+    h2 {
+        span {
+            font-style: italic;
+            font-weight: bold;
+        }
+    }
     label {
         margin: 5px;
         font-size: 1.1em;
         text-align: left;
+        font-weight: bold;
     }
 }
 
