--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -24,8 +24,8 @@
         <div class="buttonContain">
             <button class="buttonComment" (click)="onAddComment()">Ajouter un commentaire</button>
             <div class="buttonSuvi">
-                <button (click)="onAssignBed()" class="entree">Entrée</button>
-                <button (click)="onOuting()" class="sortie">Sortie</button>
+                <button *ngIf="patient.bed == 0" (click)="onAssignBed()" class="entree">Entrée</button>
+                <button *ngIf="patient.bed != 0" (click)="onOuting()" class="sortie">Sortie</button>
                 <button class="modify"><a href="">Modifier</a></button>
             </div>
         </div>
