--- a/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
+++ b/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
@@ -6,7 +6,7 @@
     <div class="overlay">
         <div class="formContain">
             <form [formGroup]="form"  (ngSubmit)="onSubmit()">
-                <h2><p> Modifier le patient {{ patient.firstname}} {{patient.name}}</p></h2>
+                <h1><p> Modifier le patient</p></h1>
                 <div class="inputContain">
                 <div class="inputAjoutP">
                     <label for="">Nom :</label>
