--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -1,5 +1,5 @@
 <app-header-dyn></app-header-dyn>
-<div class="detailContain">
+<div *ngIf="patient" class="detailContain">
     <div class="detailPatient">
         <div class="blocPatient">
             <div class="infoPatient">
