--- a/HospidieuFront/src/app/components/patients-out/patients-out.component.html
+++ b/HospidieuFront/src/app/components/patients-out/patients-out.component.html
@@ -2,11 +2,14 @@
 <div class="background">
     <div class="patients-list-container">
         <h2>Liste des patients sortis</h2>
-        <div class="filters">
-            <button (click)="onShowPatientsIn()" class="in">Admis</button>
-            <button (click)="onShowPatientsOut()" class="current out">Sortis</button>
-            
-            
+        <div class="filtersContain">
+            <div class="filters">
+                <button (click)="onShowPatientsIn()" class="in">Admis</button>
+                <button (click)="onShowPatientsOut()" class="current out">Sortis</button>
+            </div>
+            <div class="searchBar">
+                <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Filtrer les résultats...">
+            </div>
         </div>
         <table>
             <thead>
@@ -17,7 +20,7 @@
                 <th>Détails</th>
             </thead>
             <tbody>
-                <tr *ngFor="let patient of patientsList">
+                <tr *ngFor="let patient of patientsList | filter:searchText">
                     <td>{{ patient.name }}</td>
                     <td>{{ patient.firstname }}</td>
                     <td>{{ patient.birthDate | date : 'd/MM/YYYY' }}</td>
