--- a/HospidieuFront/src/app/components/user/user.component.scss
+++ b/HospidieuFront/src/app/components/user/user.component.scss
@@ -22,7 +22,10 @@
     flex: 3;
     display: flex;
     flex-flow : column wrap;
-    align-items: center;
+    .searchBar{
+        width: 30%;
+        margin-bottom: 1em;
+    }
 }
 
 h2 {
