--- a/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
+++ b/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
@@ -24,6 +24,9 @@
     display: flex;
     flex-flow : column wrap;
     align-items: flex-start;
+    .tableContain {
+        width: 100%;
+    }
 }
 
 h2 {
