--- a/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
+++ b/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
@@ -64,7 +64,7 @@ h2 {
         &:hover {
             box-shadow: 0 0 0 0 rgba($colorBaseBlue, 1);
             transform: scale(1);
-            animation: pulse 2s infinite;
+            animation: pulseBlue 2s infinite;
         }
         &.current {
             opacity: 0.5;
@@ -72,7 +72,7 @@ h2 {
             cursor: initial;
         }
     }
-    @keyframes pulse {
+    @keyframes pulseBlue {
         0% {
             transform: scale(0.95);
             box-shadow: 0 0 0 0 rgba($colorBaseBlue, 7);
@@ -94,9 +94,9 @@ h2 {
         color: white;
         border: none;
         &:hover {
-            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 1);
+            box-shadow: 0 0 0 0 rgba($colorBaseRed, 1);
             transform: scale(1);
-            animation: pulse 2s infinite;
+            animation: pulseRed 2s infinite;
         }
         &.current {
             opacity: 0.5;
@@ -104,10 +104,10 @@ h2 {
             cursor: initial;
         }
     }
-    @keyframes pulse {
+    @keyframes pulseRed {
         0% {
             transform: scale(0.95);
-            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 7);
+            box-shadow: 0 0 0 0 rgba($colorBaseRed, 7);
         }
     
         70% {
