--- a/HospidieuFront/src/app/components/remove-from-bed/remove-from-bed.component.html
+++ b/HospidieuFront/src/app/components/remove-from-bed/remove-from-bed.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="popup-area">
         <h2>
-            Voulez-vous vraiment faire sortir le patient {{ patient.firstname }} {{ patient.name }} ?
+            Voulez-vous vraiment faire sortir le patient <span>{{ patient.firstname }} {{ patient.name }} </span>?
         </h2>
     <div class="buttons">
         <button (click)="onConfirm()" class="submit">Confirmer</button>
