update affichage lsite user

--- a/HospidieuFront/src/app/components/user/user.component.html
+++ b/HospidieuFront/src/app/components/user/user.component.html
@@ -23,7 +23,7 @@
                         <td> {{ user.name}}</td>
                         <td> {{ user.mail}}</td>
                         <!-- <td> {{ user.password}}</td> -->
-                        <td> {{ user.role}}</td>
+                        <td> {{ user.role.slice(5)}}</td>
                    
                     </tr>
                 </tbody>
