--- a/HospidieuFront/src/app/components/user/user.component.html
+++ b/HospidieuFront/src/app/components/user/user.component.html
@@ -18,9 +18,9 @@
                         <td> {{ user.idUser}}</td>
                         <td> {{ user.firstname}}</td>
                         <td> {{ user.name}}</td>
-                        <td> {{ user.email}}</td>
+                        <td> {{ user.mail}}</td>
                         <!-- <td> {{ user.password}}</td> -->
-                        <td> {{ user.role}}</td>
+                        <td> {{ user.roles}}</td>
                    
                     </tr>
                 </tbody>
