--- a/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
+++ b/HospidieuFront/src/app/components/edit-patient/edit-patient.component.html
@@ -1,12 +1,14 @@
 <app-header-dyn></app-header-dyn>
-
-
-
 <div class="ajoutPContain">
     <div class="overlay">
         <div class="formContain">
             <form [formGroup]="form"  (ngSubmit)="onSubmit()">
-                <h2><p>Patient: <span>{{ patient.firstname}} - {{patient.name}}</span></p></h2>
+                <div class="titleContain">
+                    <a href="/patient/{{patient.idPatient}}/history"><img src="../../../assets/img/return.png" alt="return"></a>
+                    <h2>
+                        <p>Patient: <span>{{ patient.firstname}} - {{patient.name}}</span></p>
+                    </h2>
+                </div>
                 <div class="inputContain">
                 <div class="inputAjoutP">
                     <label for="">Nom :</label>
