--- a/HospidieuFront/src/app/components/edit-patient/edit-patient.component.scss
+++ b/HospidieuFront/src/app/components/edit-patient/edit-patient.component.scss
@@ -20,12 +20,25 @@
                 border-radius: 10px;
                 justify-content: space-between;
                 margin-top: 5em;
-                h2 {
-                    margin: 0;
-                    text-align: center;
-                    font-family: $roboto-slab;
-                    span {
-                        font-style: italic;
+                .titleContain {
+                    display: flex;
+                    a {
+                        width: 15%;
+                        img {
+                            width: 60%;
+                            transition: .2s ease-in-out;
+                            &:hover {
+                                width: 75%;
+                            }
+                        }
+                    }
+                    h2 {
+                        margin: 0;
+                        text-align: center;
+                        font-family: $roboto-slab;
+                        span {
+                            font-style: italic;
+                        }
                     }
                 }
                 .inputContain {
@@ -70,6 +83,27 @@
                         &:hover {
                             background-position: 0 0;
                         }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        .ajoutPContain .formContain{
+            margin-top: 3em;
+            flex-direction: initial;
+            form {   
+                min-height: 100%;
+                min-width: 95%;
+                padding: .5em;
+                gap: 1em;
+                justify-content: left;
+                .inputContain {
+                    flex-direction: column;
+                    gap: 10px;
+                    input {
+                        width: 100%!important;
                     }
                 }
             }
