--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -22,17 +22,17 @@
                 <span *ngIf="patient.bed == 0">- -</span>
             </div>
         <div class="buttonContain">
-            <button class="buttonComment" (click)="onAddComment()">Ajouter un commentaire</button>
+            <button *ngIf="isInfirmier" class="buttonComment" (click)="onAddComment()">Ajouter un commentaire</button>
             <div class="buttonSuvi">
-                <button *ngIf="patient.bed == 0" (click)="onAssignBed()" class="entree">Entrée</button>
-                <button *ngIf="patient.bed != 0" (click)="onOuting()" class="sortie">Sortie</button>
-                <button class="modify" (click)="onEditPatient(patientId)">Modifier</button>
+                <button *ngIf="patient.bed == 0 && isSecretaire" (click)="onAssignBed()" class="entree">Entrée</button>
+                <button *ngIf="patient.bed != 0 && isSecretaire" (click)="onOuting()" class="sortie">Sortie</button>
+                <button *ngIf="isSecretaire" class="modify" (click)="onEditPatient(patientId)">Modifier</button>
             </div>
         </div>
     </div>
     </div>
 
-    <div class="historiquePatient">
+    <div *ngIf="isInfirmier" class="historiquePatient">
         <h2>Historique du patient</h2>
         <div *ngFor="let monitor of monitoring" class="historiqueBloc">
             <div class="CommentBloc">
@@ -41,7 +41,7 @@
             </div>
             <div class="commentInfo">
                 <div class="dateInfo">{{monitor.date | date : "dd/MM/yy, à HH:mm"}}</div>
-                <div class="infirmierInfo">{{monitor.userName}}</div>
+                <div class="infirmierInfo">{{monitor.userName}} - {{monitor.userFirstName}}</div>
             </div>
 
         </div>
