--- a/HospidieuFront/src/app/components/patients-list/patients-list.component.html
+++ b/HospidieuFront/src/app/components/patients-list/patients-list.component.html
@@ -1,7 +1,7 @@
 <app-header-dyn></app-header-dyn>
 <div class="background">
     <div class="patients-list-container">
-        <h2>Liste des patients admis</h2>
+        <h2>Liste des patients</h2>
         <div class="filtersContain">
             <div class="filters">
                 <button (click)="onShowPatientsIn()" class="in" [ngClass]="{'current' : show == 'in'}"
