--- a/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
+++ b/HospidieuFront/src/app/components/patients-list/patients-list.component.scss
@@ -120,4 +120,27 @@ h2 {
             box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
         }
     }
+
+    @media screen and (max-width: 500px) {
+        .image-container{
+            display: none;
+        }
+        .patients-list-container{
+            padding: 0;
+            flex: 1;
+            margin-left: 0.5em;
+            margin-right: 0.5em;
+            margin-top: 5em;
+            .filtersContain .filters{
+                width: 50%;
+            }
+        }
+        .patients-list-container .tableContain{
+            width: 100%;
+        }
+        .filtersContain {
+            width: 100%;
+        }
+    
+    }
     
