--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.scss
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.scss
@@ -11,7 +11,7 @@
     padding-top: 2em;
     .detailPatient {
         padding-left: 2em;
-        width: 35%;
+        width: 50%;
         .blocPatient {
             background-color: rgba($colorBaseBlue, 0.90);
             border-radius: 10px;
@@ -161,6 +161,10 @@
             padding-left: 0;
             display: flex;
             justify-content: center;
+            width: 100%;
+        }
+        .historiquePatient {
+            width: 100%;
         }
     }
 }
