--- a/HospidieuFront/src/app/components/connexion/connexion.component.scss
+++ b/HospidieuFront/src/app/components/connexion/connexion.component.scss
@@ -10,6 +10,7 @@
         align-items: center;
         height: 100%;
         justify-content: center;
+        padding-top: 80px;
         form {
             display: flex;
             flex-direction: column;
@@ -71,9 +72,11 @@
 }
 
 @media screen and (max-width: 500px) {
-    .connectContain .formContain form {
-        width: 95%;
-        height: 50%;
+    .connectContain .formContain{
+        padding-top: 80px;
+        form {
+            width: 95%;
+            height: 80%;
+        }
     }
-
 }
